--- a/inst/book/references.bib
+++ b/inst/book/references.bib
@@ -291,3 +291,284 @@
 	url = {https://www.researchgate.net/profile/Bo-Zhao-3/publication/317177787_Web_Scraping/links/5c293f85a6fdccfc7073192f/Web-Scraping.pdf},
 	note = {Publisher: Springer Living ed. Cham}
 }
+
+@article{zhou2018,
+	title = {A brief introduction to weakly supervised learning},
+	author = {Zhou, Zhi-Hua},
+	year = {2018},
+	date = {2018},
+	journal = {National science review},
+	pages = {44{\textendash}53},
+	volume = {5},
+	number = {1},
+	note = {Publisher: Oxford University Press}
+}
+
+@article{zhu2005,
+	title = {Semi-supervised learning literature survey},
+	author = {Zhu, Xiaojin Jerry},
+	year = {2005},
+	date = {2005},
+	note = {Publisher: University of Wisconsin-Madison Department of Computer Sciences}
+}
+
+@article{blum1998,
+	title = {A note on learning from multiple-instance examples},
+	author = {Blum, Avrim and Kalai, Adam},
+	year = {1998},
+	date = {1998},
+	journal = {Machine learning},
+	pages = {23{\textendash}29},
+	volume = {30},
+	number = {1},
+	note = {Publisher: Springer}
+}
+
+@article{jin2002,
+	title = {Learning with multiple labels},
+	author = {Jin, Rong and Ghahramani, Zoubin},
+	year = {2002},
+	date = {2002},
+	journal = {Advances in neural information processing systems},
+	volume = {15}
+}
+
+@article{lecun1998,
+	title = {Gradient-based learning applied to document recognition},
+	author = {LeCun, Yann and Bottou, {Léon} and Bengio, Yoshua and Haffner, Patrick},
+	year = {1998},
+	date = {1998},
+	journal = {Proceedings of the IEEE},
+	pages = {2278{\textendash}2324},
+	volume = {86},
+	number = {11},
+	note = {Publisher: Ieee}
+}
+
+@article{nelder1972,
+	title = {Generalized linear models},
+	author = {Nelder, John Ashworth and Wedderburn, Robert WM},
+	year = {1972},
+	date = {1972},
+	journal = {Journal of the Royal Statistical Society: Series A (General)},
+	pages = {370{\textendash}384},
+	volume = {135},
+	number = {3},
+	note = {Publisher: Wiley Online Library}
+}
+
+@article{ramesh,
+	title = {Hierarchical Text-Conditional Image Generation with CLIP Latents},
+	author = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+	doi = {10.48550/arXiv.2204.06125}
+}
+
+@book{kuhn2019,
+	title = {Feature engineering and selection: A practical approach for predictive models},
+	author = {Kuhn, Max and Johnson, Kjell},
+	year = {2019},
+	date = {2019},
+	publisher = {CRC Press}
+}
+
+@article{baldi2013,
+	title = {Understanding dropout},
+	author = {Baldi, Pierre and Sadowski, Peter J.},
+	year = {2013},
+	date = {2013},
+	journal = {Advances in neural information processing systems},
+	volume = {26}
+}
+
+@article{galar2011,
+	title = {A review on ensembles for the class imbalance problem: bagging-, boosting-, and hybrid-based approaches},
+	author = {Galar, Mikel and Fernandez, Alberto and Barrenechea, Edurne and Bustince, Humberto and Herrera, Francisco},
+	year = {2011},
+	date = {2011},
+	journal = {IEEE Transactions on Systems, Man, and Cybernetics, Part C (Applications and Reviews)},
+	pages = {463{\textendash}484},
+	volume = {42},
+	number = {4},
+	note = {Publisher: IEEE}
+}
+
+@article{kingma2014,
+	title = {Adam: A Method for Stochastic Optimization},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	doi = {10.48550/arXiv.1412.6980}
+}
+
+@inbook{lecun2012,
+	title = {Efficient backprop},
+	author = {LeCun, Yann A. and Bottou, {Léon} and Orr, Genevieve B. and {Müller}, Klaus-Robert},
+	year = {2012},
+	date = {2012},
+	publisher = {Springer},
+	pages = {9{\textendash}48}
+}
+
+@article{cour2011,
+	title = {Learning from partial labels},
+	author = {Cour, Timothee and Sapp, Ben and Taskar, Ben},
+	year = {2011},
+	date = {2011},
+	journal = {The Journal of Machine Learning Research},
+	pages = {1501{\textendash}1536},
+	volume = {12},
+	note = {Publisher: JMLR. org}
+}
+
+@article{feng2020,
+	title = {Provably consistent partial-label learning},
+	author = {Feng, Lei and Lv, Jiaqi and Han, Bo and Xu, Miao and Niu, Gang and Geng, Xin and An, Bo and Sugiyama, Masashi},
+	year = {2020},
+	date = {2020},
+	journal = {Advances in Neural Information Processing Systems},
+	pages = {10948{\textendash}10960},
+	volume = {33}
+}
+
+@inproceedings{grandvalet2002,
+	title = {Logistic regression for partial labels},
+	author = {Grandvalet, Yves},
+	year = {2002},
+	date = {2002}
+}
+
+@article{hullermeier2006,
+	title = {Learning from ambiguously labeled examples},
+	author = {{Hüllermeier}, Eyke and Beringer, {Jürgen}},
+	year = {2006},
+	date = {2006},
+	journal = {Intelligent Data Analysis},
+	pages = {419{\textendash}439},
+	volume = {10},
+	number = {5},
+	note = {Publisher: IOS Press}
+}
+
+@article{liu2012,
+	title = {A conditional multinomial mixture model for superset label learning},
+	author = {Liu, Liping and Dietterich, Thomas},
+	year = {2012},
+	date = {2012},
+	journal = {Advances in neural information processing systems},
+	volume = {25}
+}
+
+@article{ishida2017,
+	title = {Learning from complementary labels},
+	author = {Ishida, Takashi and Niu, Gang and Hu, Weihua and Sugiyama, Masashi},
+	year = {2017},
+	date = {2017},
+	journal = {Advances in neural information processing systems},
+	volume = {30}
+}
+
+@article{ishida2017a,
+	title = {Learning from complementary labels},
+	author = {Ishida, Takashi and Niu, Gang and Hu, Weihua and Sugiyama, Masashi},
+	year = {2017},
+	date = {2017},
+	journal = {Advances in neural information processing systems},
+	volume = {30}
+}
+
+@article{magick,
+	title = {magick: Advanced Graphics and Image-Processing in R},
+	author = {Ooms, Jeroen},
+	year = {2021},
+	date = {2021},
+	url = {https://CRAN.R-project.org/package=magick}
+}
+
+@article{magick-2,
+	title = {magick: Advanced Graphics and Image-Processing in R},
+	author = {Ooms, Jeroen},
+	year = {2021},
+	date = {2021},
+	url = {https://CRAN.R-project.org/package=magick}
+}
+
+@inproceedings{yu2018,
+	title = {Learning with biased complementary labels},
+	author = {Yu, Xiyu and Liu, Tongliang and Gong, Mingming and Tao, Dacheng},
+	year = {2018},
+	date = {2018},
+	pages = {68{\textendash}83}
+}
+
+@inproceedings{feng2020a,
+	title = {Learning with multiple complementary labels},
+	author = {Feng, Lei and Kaneko, Takuo and Han, Bo and Niu, Gang and An, Bo and Sugiyama, Masashi},
+	year = {2020},
+	date = {2020},
+	publisher = {PMLR},
+	pages = {3072{\textendash}3081}
+}
+
+@article{zhao2017a,
+	title = {Web scraping},
+	author = {Zhao, Bo},
+	year = {2017},
+	date = {2017},
+	journal = {Encyclopedia of big data},
+	pages = {1{\textendash}3},
+	url = {https://www.researchgate.net/profile/Bo-Zhao-3/publication/317177787_Web_Scraping/links/5c293f85a6fdccfc7073192f/Web-Scraping.pdf},
+	note = {Publisher: Springer Living ed. Cham}
+}
+
+@article{xml2,
+	title = {xml2: Parse XML},
+	author = {Wickham, Hadley and Hester, Jim and Ooms, Jeroen},
+	year = {2021},
+	date = {2021},
+	url = {https://CRAN.R-project.org/package=xml2}
+}
+
+@article{stringr,
+	title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+	author = {Wickham, Hadley},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=stringr}
+}
+
+@article{rvest,
+	title = {rvest: Easily Harvest (Scrape) Web Pages},
+	author = {Wickham, Hadley},
+	year = {2022},
+	date = {2022},
+	url = {https://CRAN.R-project.org/package=rvest}
+}
+
+@article{kaur2014,
+	title = {Captcha and Its Techniques: A Review},
+	author = {Kaur, Kiranjot and Behal, Sunny},
+	year = {2014},
+	month = {01},
+	date = {2014-01-01},
+	journal = {International Journal of Computer Science and Information Technologies,},
+	volume = {5}
+}
+
+@article{li2014,
+	title = {Multivariate binomial/multinomial control chart},
+	author = {Li, Jian and Tsung, Fugee and Zou, Changliang},
+	year = {2014},
+	date = {2014},
+	journal = {IIE Transactions},
+	pages = {526{\textendash}542},
+	volume = {46},
+	number = {5},
+	note = {Publisher: Taylor & Francis}
+}
+
+@inproceedings{ioffe2015,
+	title = {Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+	author = {Ioffe, Sergey and Szegedy, Christian},
+	year = {2015},
+	date = {2015},
+	publisher = {PMLR},
+	pages = {448{\textendash}456}
+}
